Version 1.6 -Tau Ceti-

* [NEW] User menus, the user can add items to the application menu, an option to
  automatically add top-level bookmarks to the menu is provided.
* [NEW] Theme control center: if activated you can control the theme
  by section, by category or by specific object.
* [NEW] Ephemerides feature: admin can set up images/texts for specific
  dates, users can browse using the calendar to get the images/texts for
  any day. A module is provided to display the image/text for the day,
  if many one is choosen randomly.
* [NEW] User files section, users can store personal files and download
  them whenever they want, files are only visible to the user. Admin can
  control a disk quota for each user.
* [NEW] User Notepads section added, users can sketch notes view them and remove them,
  the notes can be viewed as parsed wiki pages or unparsed. Useful to keep memos,
  user personal information, etc.
* [NEW] Newsreader added, users can add newsservers, browse groups from the servers
  and read the articles from any group. A save position option is provided to highlight
  new messages per group/user
* [NEW] SnowChekMail the function used to validate email addresses can be disabled if
  you configure your system as Windows in the main admin panel.
* [NEW] My Tiki section added as a refurbished user_preferences section, this new section
  includes webmail, user_preferences, modules, bookmarks, tasks and all the per-user sections of
  Tiki.
* [NEW] Wiki plugin added: SPLIT used to split a wiki page in two columns.
* [NEW] Wiki plugin added: SQL can be used to display the result of an SQL query to the
  tiki database, useful for reports and others. If you don't use tiki as an intranet you
  may want to remove this plugin for security reasons (!!).
* [NEW] User tasks, users can set-up tasks and mark tasks as completed or remove tasks, 
  a user module is provided. This can be used as a simple to-do list for users.