@@ -3411,6 +3411,7 @@ function parse_data($data)
     global $feature_hotwords_nw;
     global $feature_wiki_pictures;
     global $tiki_p_upload_picture;
+    global $feature_wiki_tables;
     global $page; 
     global $dbTiki;
     global $structlib;
@@ -3495,39 +3496,74 @@ function parse_data($data)
     }
     
     //unset($smc);
+    if($feature_wiki_tables != 'new') {
+	    // New syntax for tables
+	    if (preg_match_all("/\|\|(.*)\|\|/", $data, $tables)) {
+	     $maxcols = 1;
+	      $cols = array();
+	      for($i = 0; $i < count($tables[0]); $i++) {
+	        $rows = explode('||', $tables[0][$i]);
+	        $col[$i] = array();
+	        for ($j = 0; $j < count($rows); $j++) {
+	          $cols[$i][$j] = explode('|', $rows[$j]);
+	          if (count($cols[$i][$j]) > $maxcols)
+	            $maxcols = count($cols[$i][$j]);
+	        }
+	      }
+	      for ($i = 0; $i < count($tables[0]); $i++) {
+	        $repl = '<table class="wikitable" border="1">';
+	        for ($j = 0; $j < count($cols[$i]); $j++) {
+	          $ncols = count($cols[$i][$j]);
+	          if ($ncols == 1 && !$cols[$i][$j][0])
+	            continue;
+	          $repl .= '<tr>';
+	          for ($k = 0; $k < $ncols; $k++) {
+	            $repl .= '<td';
+	            if ($k == $ncols - 1 && $ncols < $maxcols)
+	              $repl .= ' colspan=' . ($maxcols-$k);
+	            $repl .= '>' . $cols[$i][$j][$k] . '</td>';
+	          }
+	          $repl.='</tr>';
+	        }
+	        $repl.='</table>';
+	        $data = str_replace($tables[0][$i],$repl,$data);
+	      }
+	    }
+    } else {
+	    // New syntax for tables
+	    if (preg_match_all("/\|\|(.*)\|\|/", $data, $tables)) {
+ 	      $maxcols = 1;
+	      $cols = array();
+	      for($i = 0; $i < count($tables[0]); $i++) {
+	        $rows = explode("<br/>", $tables[0][$i]);
+	        $col[$i] = array();
+	        for ($j = 0; $j < count($rows); $j++) {
+	          $rows[$j]=str_replace('||','',$rows[$j]);
+	          $cols[$i][$j] = explode('|', $rows[$j]);
+	          if (count($cols[$i][$j]) > $maxcols)
+	            $maxcols = count($cols[$i][$j]);
+	        }
+	      }
+	      for ($i = 0; $i < count($tables[0]); $i++) {
+	        $repl = '<table class="wikitable" border="1">';
+	        for ($j = 0; $j < count($cols[$i]); $j++) {
+	          $ncols = count($cols[$i][$j]);
+	          if ($ncols == 1 && !$cols[$i][$j][0])
+	            continue;
+	          $repl .= '<tr>';
+	          for ($k = 0; $k < $ncols; $k++) {
+	            $repl .= '<td';
+	            if ($k == $ncols - 1 && $ncols < $maxcols)
+	              $repl .= ' colspan=' . ($maxcols-$k);
+	            $repl .= '>' . $cols[$i][$j][$k] . '</td>';
+	          }
+	          $repl.='</tr>';
+	        }
+	        $repl.='</table>';
+	        $data = str_replace($tables[0][$i],$repl,$data);
+	      }
+	    }
     
-    
-    // New syntax for tables
-    if (preg_match_all("/\|\|(.*)\|\|/", $data, $tables)) {
-     $maxcols = 1;
-      $cols = array();
-      for($i = 0; $i < count($tables[0]); $i++) {
-        $rows = explode('||', $tables[0][$i]);
-        $col[$i] = array();
-        for ($j = 0; $j < count($rows); $j++) {
-          $cols[$i][$j] = explode('|', $rows[$j]);
-          if (count($cols[$i][$j]) > $maxcols)
-            $maxcols = count($cols[$i][$j]);
-        }
-      }
-      for ($i = 0; $i < count($tables[0]); $i++) {
-        $repl = '<table class="wikitable" border="1">';
-        for ($j = 0; $j < count($cols[$i]); $j++) {
-          $ncols = count($cols[$i][$j]);
-          if ($ncols == 1 && !$cols[$i][$j][0])
-            continue;
-          $repl .= '<tr>';
-          for ($k = 0; $k < $ncols; $k++) {
-            $repl .= '<td';
-            if ($k == $ncols - 1 && $ncols < $maxcols)
-              $repl .= ' colspan=' . ($maxcols-$k);
-            $repl .= '>' . $cols[$i][$j][$k] . '</td>';
-          }
-          $repl.='</tr>';
-        }
-        $repl.='</table>';
-        $data = str_replace($tables[0][$i],$repl,$data);
-      }
     }
 
 
